gke/airbnb-properties.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airbnb-property
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      name: airbnb-property
  template:
    metadata:
      labels:
        name: airbnb-property
    spec:
      containers:
      - env:
        - name: MYSQL_HOST
          value: mysql-service
        image: qnguyen3411/airbnb-property:latest
        name: airbnb-property
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: airbnb-property-service 
  namespace: default
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080 
  selector:
    name: airbnb-property
