gke/backoffice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backoffice
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      name: backoffice
  template:
    metadata:
      labels:
        name: backoffice
    spec:
      containers:
        - image: qnguyen3411/airbnb-backoffice:latest
          name: backoffice
          ports:
          - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: backoffice-service 
  namespace: default
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
  selector:
    name: backoffice
