gke/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      name: frontend
  template:
    metadata:
      labels:
        name: frontend
    spec:
      containers:
        - image: qnguyen3411/airbnb-frontend:latest
          name: frontend
          ports:
          - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service 
  namespace: default
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
  selector:
    name: frontend
