gke/request.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backoffice-backend
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      name: backoffice-backend
  template:
    metadata:
      labels:
        name: backoffice-backend
    spec:
      containers:
      - env:
        - name: MYSQL_HOST
          value: mysql-service
        image: qnguyen3411/backoffice-backend:latest
        name: backoffice-backend
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: backoffice-backend-service 
  namespace: default
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080 
  selector:
    name: backoffice-backend
