gke/airbnb-properties-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: airbnb-property
  annotations:
    kubernetes.io/ingress.class: kong
spec:
  rules:
  - http:
      paths:
      - path: /property
        backend:
          serviceName: airbnb-property-service
          servicePort: 80
