gke/backend-auth-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: backend-auth
  annotations:
    kubernetes.io/ingress.class: kong
spec:
  rules:
  - http:
      paths:
      - path: /auth
        backend:
          serviceName: backend-auth-service
          servicePort: 80
