gke/backoffice-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: backoffice
  annotations:
    kubernetes.io/ingress.class: kong
spec:
  rules:
  - http:
      paths:
      - path: /backoffice
        backend:
          serviceName: backoffice-service
          servicePort: 80
