gke/payments-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: payments
  annotations:
    kubernetes.io/ingress.class: kong
spec:
  rules:
  - http:
      paths:
      - path: /payments
        backend:
          serviceName: payments-service
          servicePort: 80
