gke/request-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: helpdesk
  annotations:
    kubernetes.io/ingress.class: kong
spec:
  rules:
  - http:
      paths:
      - path: /helpdesk/request
        backend:
          serviceName: backoffice-backend-service
          servicePort: 80
